force-app/main/default/objects/Permission__c/fields/Ownership_Group__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Group__c</fullName>
    <label>Ownership Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advancement</fullName>
            </value>
            <value>
                <fullName>Cleanslate</fullName>
            </value>
            <value>
                <fullName>Coaching &amp; Retention</fullName>
            </value>
            <value>
                <fullName>Connects</fullName>
            </value>
            <value>
                <fullName>Contracts &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Employment Services</fullName>
            </value>
            <value>
                <fullName>Executive Team</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Facilities &amp; Operations</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Communications</fullName>
            </value>
            <value>
                <fullName>Recruitment</fullName>
            </value>
            <value>
                <fullName>Self-Directed Job Search</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Supportive Services</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Enterprise Strategy &amp; Committees</fullName>
            </value>
            <value>
                <fullName>Participant Service Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>