force-app/main/default/objects/Permission__c/fields/Permission_Type__c.field-meta.xml
<CustomField>
    <fullName>Permission_Type__c</fullName>
    <label>Permission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distribution List</fullName>
            </value>
            <value>
                <fullName>SharePoint Permission &amp; Distribution List</fullName>
            </value>
            <value>
                <fullName>SharePoint Permission Group</fullName>
            </value>
            <value>
                <fullName>Shared Mailbox</fullName>
            </value>
            <value>
                <fullName>User Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>