force-app/main/default/objects/Permission__c/fields/Use_Type__c.field-meta.xml
<CustomField>
    <fullName>Use_Type__c</fullName>
    <label>Use Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Grouping</fullName>
            </value>
            <value>
                <fullName>Internal Leadership</fullName>
            </value>
            <value>
                <fullName>Internal Team</fullName>
            </value>
            <value>
                <fullName>Internal Committee</fullName>
            </value>
            <value>
                <fullName>Internal Special Purpose</fullName>
            </value>
            <value>
                <fullName>External Special Purpose</fullName>
            </value>
            <value>
                <fullName>External Affinity Group</fullName>
            </value>
            <value>
                <fullName>Internal System-Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>