force-app/main/default/objects/Permission__c/listViews/All_Distribution_Lists.listView-meta.xml
<ListView>
    <fullName>All_Distribution_Lists</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Use_Type__c</columns>
    <columns>Ownership_Group__c</columns>
    <columns>Permission_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permission_Type__c</field>
        <operation>equals</operation>
        <value>Distribution List</value>
    </filters>
    <label>All Distribution Lists</label>
    <language>en_US</language>
</ListView>