force-app/main/default/objects/Permission__c/listViews/All_SharePoint_Permission_Groups.listView-meta.xml
<ListView>
    <fullName>All_SharePoint_Permission_Groups</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Use_Type__c</columns>
    <columns>Ownership_Group__c</columns>
    <columns>Permission_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permission_Type__c</field>
        <operation>equals</operation>
        <value>SharePoint Permission Group</value>
    </filters>
    <label>All SharePoint Permission Groups</label>
    <language>en_US</language>
</ListView>