force-app/main/default/objects/Permission__c/listViews/All_User_Accounts.listView-meta.xml
<ListView>
    <fullName>All_User_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Use_Type__c</columns>
    <columns>Ownership_Group__c</columns>
    <columns>Permission_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permission_Type__c</field>
        <operation>equals</operation>
        <value>User Account</value>
    </filters>
    <label>All User Accounts</label>
    <language>en_US</language>
</ListView>